Home page logo set up

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,6 +25,7 @@
 }
 
 .toolbar-title{
+  font-size: 175%;
   color: white;
   //font-family: Chalkboard, sans-serif;
   text-align: center;
@@ -52,6 +53,7 @@
     background: transparentize(grey, 0.8);
     padding-left: 3%;
   }
+
 }
 
 .content * {
