working on adding Student to studentQueue when they check in

--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -20,8 +20,8 @@
   <ion-item>
     <!--Pressing button will lead to queue being updates with current student added in the last position-->
     <!--It will also cause the ion-item under this one to replace this item-->
-    <button item-start ion-button clear>
-      <ion-icon name="add-circle" color="primary" (click)="addStudent(1, course)" ></ion-icon>
+    <button item-start ion-button clear >
+      <ion-icon name="add-circle" color="primary" (click)="addStudent(1)"></ion-icon>
     </button>
     <!--The current student-->
     <h5>Salman</h5>
