--- a/src/components/course-list/course-list.scss
+++ b/src/components/course-list/course-list.scss
@@ -2,4 +2,12 @@ course-list {
   .dropdown {
     box-shadow: black 4px 4px 20px;
   }
+
+  ion-item-sliding.item-wrapper {
+    background: transparent;
+  }
+
+  .trash {
+    background: map-get($colors, danger);
+  }
 }
