--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -66,8 +66,8 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <button ion-button class="googleLogin">
-          <ion-img (click)="googleLogin()" width="35" height="35" src="../assets/imgs/google_login_icon.png"></ion-img>
+        <button ion-button class="googleLogin" (click)="googleLogin()">
+          <ion-img width="35" height="35" src="../assets/imgs/google_login_icon.png"></ion-img>
         </button>
       </ion-col>
     </ion-row>
