--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -67,6 +67,7 @@
     <ion-row>
       <ion-col>
         <button ion-button class="googleLogin" (click)="googleLogin()">
+        <!-- TODO: Get google login icon -->
           <ion-img width="35" height="35" src="../assets/imgs/google_login_icon.png"></ion-img>
         </button>
       </ion-col>
