Changed courseKey to course in navParams
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/course-office-hours/course-office-hours.html
+++ b/src/components/course-office-hours/course-office-hours.html
@@ -1,4 +1,3 @@
-<!--Only if something is going on at the moment-->
 <ion-card>
   <ion-card-header>
     Current Office Hours
@@ -34,7 +33,7 @@
 
 <!--If instructor for the class-->
 <ion-card>
-  <ion-card-header [navPush]="'EditHoursPage'" [navParams]="{courseKey: courseKey}">
+  <ion-card-header [navPush]="'EditHoursPage'" [navParams]="{course: course}">
     Edit Office Hours
   </ion-card-header>
 </ion-card>
