Changed background of bottom tabbar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -95,4 +95,13 @@
   background: transparent;
 }
 
+//.tab-button{
+//  background: url("../assets/imgs/woodbrown.jpg");
+//  background-size: cover;
+//}
+
+.tabbar * {
+  background: url("../assets/imgs/woodbrown.jpg");
+  background-size: cover;
+}
 
