working on studentQueue updates

--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -24,7 +24,7 @@
       <ion-icon name="add-circle" color="primary" (click)="addStudent(1)"></ion-icon>
     </button>
     <!--The current student-->
-    <h5>Salman</h5>
+    <h5>{{ profile.name }}</h5>
     <!--Potential queue position – we need to make sure this keeps updating actively-->
     <ion-badge item-end>4</ion-badge>
   </ion-item>
