--- a/src/components/queue-for-instructors/queue-for-instructors.html
+++ b/src/components/queue-for-instructors/queue-for-instructors.html
@@ -4,25 +4,26 @@
       <button item-start ion-button clear>
         <ion-icon name="remove-circle" color="primary"></ion-icon>
       </button>
-      <h5>{{ student.name }}</h5>
+      <h5 > {{student}}</h5>
+      <!-- <h5 *ngIf="studentQueue.indexOf(student) > 0"> {{profileDataProvider.getProfileByKey(student)}}</h5> -->
     <!--Ion-item for each student in the queue-->
     <!-- <ion-item>
       <!--If instructor presses button, student is removed and queue is updated-->
-      <button item-start ion-button clear>
+      <!-- <button item-start ion-button clear>
         <ion-icon name="remove-circle" color="primary"></ion-icon>
       </button>
       <!--Name of student-->
-      <h5>Raza Khalid</h5>
+      <!-- <h5>Raza Khalid</h5> --> 
       <!--Instead of 1, position in queue-->
       <ion-badge item-end>1</ion-badge>
     </ion-item>
-    <ion-item> 
-    <button item-start ion-button clear>
+    <!-- <ion-item>  -->
+    <!-- <button item-start ion-button clear>
         <ion-icon name="remove-circle" color="primary"></ion-icon>
       </button>
       <h5>Raza</h5>
-      <ion-badge item-end>1</ion-badge>
-    </ion-item>
+      <ion-badge item-end>1</ion-badge> -->
+    <!-- </ion-item> -->
   </ion-list>
 
     <!-- <ion-item>
