Office hours a lot more solid now. More accurate with less bugs
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/components/course-office-hours/course-office-hours.html
+++ b/src/components/course-office-hours/course-office-hours.html
@@ -22,7 +22,7 @@
           No upcoming office hours
         </button>
       </ion-item>
-      <ion-item *ngIf="!currentOfficeHours">
+      <ion-item *ngIf="!currentOfficeHours && officeHoursList.length > 0">
         <button ion-button padding clear small [navPush]="'StudentQueuePage'">
           {{ officeHoursList[0].date }}
         </button>
