--- a/src/components/course-list/course-list.html
+++ b/src/components/course-list/course-list.html
@@ -26,7 +26,7 @@
                   class="trash"
                   color="danger"
                   name="studentCourse"
-                  (click)="removeCourse($event, course)">
+                  (click)="removeCourse('studentCourse', course)">
             <ion-icon name="trash"></ion-icon>
             DELETE
           </button>
@@ -60,7 +60,7 @@
                   class="trash"
                   color="danger"
                   name="instructorCourse"
-                  (click)="removeCourse($event, course)">
+                  (click)="removeCourse('instructorCourse', course)">
             <ion-icon name="trash"></ion-icon>
             DELETE
           </button>
