--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -74,8 +74,9 @@
   //box-shadow: none;
 }
 
-.button{
+.button {
   background: transparent;
+
 }
 
 .label {
@@ -102,3 +103,15 @@
   background-size: cover;
 }
 
+//.tab-button {
+//  background: url("../assets/imgs/woodbrown.jpg");
+//  background-size: cover;
+//}
+//
+//.icon-ios * {
+//  background-color: black;
+//}
+
+.select{
+  background: transparent;
+}
