--- a/src/components/queue-for-students/queue-for-students.html
+++ b/src/components/queue-for-students/queue-for-students.html
@@ -33,7 +33,7 @@
     <!--Pressing button will lead to queue being updates with current student removed-->
     <!--It will also cause the ion-item above this one to replace this item-->
     <button item-start ion-button clear>
-      <ion-icon name="remove-circle" color="primary"></ion-icon>
+      <ion-icon name="remove-circle" color="primary" (click)="removeStudent(profile.key, 1)"></ion-icon>
     </button>
     <!--The current student-->
     <h5>Salman Ahmed</h5>
